# Ontological-Reasoning-in-Medical-Knowledge-Retrieval

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  fix_base64.b64  pyproject.toml  run_pipeline.py
configs/: assertion.yaml  base.yaml  encoder_xlm_roberta_base.yaml  extraction.yaml  linking.yaml  thresholds.yaml
data/: generation_stats.json  training_data.jsonl
data_generation/: .env  config.py  dataset_curator.py  generated_batch_filter.py  generation_planner.py  llm_client.py  local_validator.py  pipeline.py  requirements.txt  run_pipeline.py  rxnorm_candidate_regenerator.py  test.py
docs/: IMPLEMENTATION_CHECKLIST.md  MedLink-IE_v2_Framework.md  medlink_ie_codex_playbook_full.md
memory-bank/: 00-project-overview.md  01-architecture.md  02-workflows.md  03-decisions-and-risks.md  04-medlink-ie-context.md  README.md
scripts/: build_provisional_encoder_split.py  curate_generated_data.py  curate_jsonl_batch.py  evaluate_synthetic_data.py  full_infer.ps1  remap_rxnorm_candidates.py  reproduce.ps1  run_generation.py  run_note_labeling.py  run_paraphrase_generation.py  smoke_infer.ps1  train_encoder_span_type.py  train_xlm_roberta_bio.py
specs/: ADJUDICATION_TEMPLATE.yaml  ADVERSARIAL_ANNOTATION_CASES.md  ANNOTATION_GUIDE.md  TASK_CONTRACT.md  artifact_inventory.yaml  artifact_manifest.schema.json  terminology_manifest.yaml
tests/: conftest.py  smoke_test.py  test_dataset_curator.py  test_generated_batch_filter.py  test_generation_curriculum.py  test_generation_quality_guards.py  test_note_labeler.py  test_pipeline.py  (+3 more)
(+203 files in other folders)
