[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "medlink-ie"
version = "0.1.0"
description = "MedLink-IE medical information extraction framework"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
