[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "medlink-ie"
version = "0.1.0"
description = "MedLink-IE medical information extraction framework"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = [
    "mypy>=1.13",
    "pytest>=8.3",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "ruff>=0.8",
    "tqdm>=4.65.0",
    "types-PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["data_generation", "tests/test_*.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
